ensure responsiveness on small screen including mobile devices

--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -72,6 +72,12 @@ body {
   font-weight: 600;
 }
 
-
+/* ensure responsiveness on small screen including mobile devices */
+@media (max-width: 768px) {
+  .image-info {
+  display: none; /*Hide image info on small screens*/
+  }
+  }
+  
 
 
